--- a/.gitignore
+++ b/.gitignore
@@ -54,5 +54,9 @@ unity-version/Assets/Standard\ Assets (Mobile)
 /*.pidb
 /*.booproj
 
+# Fichier de configuration
+unity-version/ProjectSettings/ProjectSettings.asset
+
+
 #Unity3D Generated File On Crash Reports
 sysinfo.txt
